# openbis-renku

./: .gitignore  README.md  libraries.txt  openBIS-Conenction.ipynb  openBIS-Connection.ipynb  openBIS-Connection.ipynb.html  pyproject.toml  requirements.txt  successful.txt  unsuccessful.txt
openbis_renku.egg-info/: requires.txt
